[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/buttons/button_pressed_title.png" type="Texture" id=1]
[ext_resource path="res://src/level/game/change_scene_button.gd" type="Script" id=2]
[ext_resource path="res://src/themes/theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/sprites/buttons/button_hover_title.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/buttons/button_normal_title.png" type="Texture" id=5]
[ext_resource path="res://src/audio/ui_button.wav" type="AudioStream" id=6]

[node name="change_scene_button" type="TextureButton"]
theme = ExtResource( 3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
script = ExtResource( 2 )

[node name="label" type="Label" parent="."]
modulate = Color( 1, 0.921569, 0.87451, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -13.0
margin_right = -13.0
text = "Play"
align = 1
valign = 1

[node name="audio_stream_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "UI"

[connection signal="button_down" from="." to="." method="_on_change_scene_button_button_down"]
[connection signal="button_up" from="." to="." method="_on_change_scene_button_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_change_scene_button_mouse_entered"]
